# strands_hri

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
action/: bellbot.action
bellbot_action_server/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
bellbot_action_server/action/: bellbot.action
bellbot_action_server/conf/: bellbot_voice.yaml
bellbot_action_server/launch/: bellbot_action_server.launch
bellbot_action_server/msg/: BellbotState.msg
bellbot_action_server/scripts/: bellbot_server.py  bellbot_test_client.py  voice_output.py
bellbot_action_server/src/: agent.py  bellbot_server.py  bellbot_state_machine.py
bellbot_action_server/src/bellbot_action_server/: bellbot_state_machine.py
bellbot_action_server/srv/: NewTarget.srv
bellbot_gui/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
bellbot_gui/conf/: defaults.ini
bellbot_gui/launch/: test.launch
bellbot_gui/obsolete/www_not_used/: call_robot.html  livescreen.py
bellbot_gui/scripts/: foo.py  gui.py  gui2.py  server.py
bellbot_gui/src/: destination_data.py  gui.py  gui2.py  livescreen.py  record_feedback.cpp
bellbot_gui/templates/: feedback_template.html  gui_select_dest_template.html
bellbot_gui/www/: _htaccess  base.html  bellbot.ini  cake.html  destination.html  empty.html  feedback.html  feedback.txt  filesave.php  gui_select_dest_footer.txt  gui_select_dest_header.txt  gui_select_dest_page.html  navigation.html  scheduling.html  setup.html  waiting.html
bellbot_gui/www/css/: style.css
bellbot_gui/www/js/: script.js
bellbot_gui/www/static/: ._jquery-ui.css  ._jquery-ui.min.js  ._jquery.keyboard.extension-all.min.js  ._jquery.keyboard.extension-altkeyspopup.min.js  ._jquery.keyboard.extension-autocomplete.js  ._jquery.keyboard.extension-autocomplete.min.js  ._jquery.keyboard.extension-extender.min.js  ._jquery.keyboard.extension-mobile.min.js  ._jquery.keyboard.extension-navigation.min.js  ._jquery.keyboard.extension-previewkeyset.min.js  ._jquery.keyboard.extension-scramble.min.js  ._jquery.keyboard.extension-typing.js  ._jquery.keyboard.extension-typing.min.js  ._jquery.keyboard.js  ._jquery.keyboard.min.js  ._jquery.min.js  ._jquery.mousewheel.js  ._jquery.mousewheel.min.js  ._keyboard.css  aaf.css  aaf.less  dashboard.js  destination.js  jquery-ui.css  jquery.ml-keyboard.css  jquery.ml-keyboard.js  navigation.js
bellbot_scheduler/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
bellbot_scheduler/scripts/: bellbot_schedule_interface.py
strands_gazing/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
strands_gazing/action/: GazeAtPose.action
strands_gazing/include/gaze_at_pose/: gaze_at_pose.h
strands_gazing/scripts/: gaze_switch.py
strands_gazing/src/gaze_at_pose/: gaze_at_pose.cpp  main.cpp
strands_hri_launch/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
strands_hri_launch/launch/: human_aware_navigation.launch  speech.launch
strands_human_aware_navigation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
strands_human_aware_navigation/cfg/: HumanAwareNavigation.cfg
strands_human_aware_navigation/launch/: human_aware_navigation.launch
strands_human_aware_navigation/scripts/: human_aware_navigation.py
strands_human_aware_navigation/src/: dwa_dyn.cpp  main.cpp
strands_human_aware_navigation/src/scripts/: human_aware_navigation.py
strands_human_aware_velocity/: CMakeLists.txt  README.md  package.xml
strands_human_aware_velocity/action/: HumanAwareVelocity.action
strands_human_aware_velocity/src/: main.cpp
strands_human_aware_velocity/src/scripts/: human_aware_planner_velocity.py  humane_aware_planner_velocity.py
strands_human_following/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
strands_human_following/action/: SimpleFollow.action
strands_human_following/conf/: default.yaml
strands_human_following/launch/: simple_follow.launch
strands_human_following/scripts/: routine_example.py  simple_follow_client.py  simple_follow_server.py
strands_human_following/src/simple_follow/: follow_and_move.py  local_search.py
strands_human_following/src/strands_human_following/: follow_and_move.py  human_follow.py  local_search.py  wander_search.py
strands_interaction_behaviours/: CHANGELOG.rst  CMakeLists.txt  package.xml
strands_interaction_behaviours/action/: BehaviourSwitch.action  InteractionEngaged.action  InteractionIdle.action
strands_interaction_behaviours/config/dialogue_options/: idle_example.txt
strands_interaction_behaviours/idle/: CMakeLists.txt  package.xml
strands_interaction_behaviours/idle/action/: BehaviourSwitch.action  InteractionIdle.action
strands_interaction_behaviours/idle/config/dialogue_options/: engaged_example.txt  idle_gameplay.txt  idle_nhm.txt
strands_interaction_behaviours/idle/launch/: idle.launch
strands_interaction_behaviours/idle/scripts/engaged_server/: engaged_server.py
strands_interaction_behaviours/idle/scripts/idle_behaviour/: idle_behaviour.py
strands_interaction_behaviours/idle/src/behaviour_switch/: behaviour_switch.py
strands_interaction_behaviours/idle/src/engaged_server/: engaged_server.py
strands_interaction_behaviours/idle/src/idle_behaviour/: idle_behaviour.py
strands_interaction_behaviours/idle/src/idle_server/: idle_server.py
strands_interaction_behaviours/launch/: idle.launch
strands_interaction_behaviours/review/src/y1_review/: y1_review.py
strands_interaction_behaviours/scripts/: insert_dialogue.py
strands_simple_follow_me/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
strands_simple_follow_me/src/: main.cpp
strands_visualise_speech/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py  speech.launch
strands_visualise_speech/action/: VisualSpeech.action
strands_visualise_speech/scripts/: visual_speech.py
strands_visualise_speech/src/sound_to_lights/: sound_to_light.py
strands_visualise_speech/src/sound_to_lights/contrib/peak_detect/: peak_detect.py
strands_visualise_speech/src/sound_to_lights/contrib/pulse/: LICENSE  setup.py
(+90 files in other folders)
