<?xml version="1.0"?>
<package>
  <name>strands_human_aware_velocity</name>
  <version>0.0.0</version>
  <description>The strands_human_aware_velocity package</description>

  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>

  <license>TODO</license>
  
  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author>

  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>strands_perception_people_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>strands_perception_people_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export/>
</package>
